wflow_publish(c("analysis/*"), republish = TRUE)

--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -9,6 +9,6 @@ output:
   workflowr::wflow_html:
     toc: yes
     toc_float: yes
-    theme: lumen
+    theme: flatly
     highlight: textmate
     code_folding: hide
