--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -9,6 +9,9 @@ navbar:
   - icon: fa-github
     text: Source code
     href: https://github.com/jens-daniel-mueller/GLODAP_AT_Southern_Ocean
+  - icon: fa-home
+    text: Jens' homepage
+    href: https://jens-daniel-mueller.github.io/
 output:
   workflowr::wflow_html:
     toc: yes
